// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`💵 ProFormMoney > 💵 ProFormMoney value expect number 1`] = `
<div>
  <form
    autocomplete="off"
    class="ant-form ant-form-vertical css-var-_r_1_ ant-form-css-var ant-pro-form"
  >
    <input
      style="display: none;"
      type="text"
    />
    <div
      class="ant-form-item css-var-_r_1_ ant-form-css-var ant-form-item-vertical"
    >
      <div
        class="ant-row ant-form-item-row css-var-_r_1_"
      >
        <div
          class="ant-col ant-form-item-control css-var-_r_1_"
        >
          <div
            class="ant-form-item-control-input"
          >
            <div
              class="ant-form-item-control-input-content"
            >
              <div
                class="ant-input-number ant-input-number-mode-input css-var-_r_1_ ant-input-number-css-var ant-input-number-outlined ant-input-number-in-form-item ant-input-number-focused"
                style="width: 100%;"
              >
                <input
                  aria-valuenow="44.33"
                  autocomplete="off"
                  class="ant-input-number-input"
                  id="amount"
                  placeholder="请输入"
                  role="spinbutton"
                  step="1"
                  value="¥ 44.33"
                />
                <div
                  class="ant-input-number-actions"
                >
                  <span
                    aria-disabled="false"
                    aria-label="Increase Value"
                    class="ant-input-number-action ant-input-number-action-up"
                    role="button"
                    unselectable="on"
                  >
                    <span
                      aria-label="up"
                      class="anticon anticon-up"
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="up"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M890.5 755.3L537.9 269.2c-12.8-17.6-39-17.6-51.7 0L133.5 755.3A8 8 0 00140 768h75c5.1 0 9.9-2.5 12.9-6.6L512 369.8l284.1 391.6c3 4.1 7.8 6.6 12.9 6.6h75c6.5 0 10.3-7.4 6.5-12.7z"
                        />
                      </svg>
                    </span>
                  </span>
                  <span
                    aria-disabled="false"
                    aria-label="Decrease Value"
                    class="ant-input-number-action ant-input-number-action-down"
                    role="button"
                    unselectable="on"
                  >
                    <span
                      aria-label="down"
                      class="anticon anticon-down"
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="down"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                        />
                      </svg>
                    </span>
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      style="display: flex; gap: 8px; align-items: center;"
    >
      <button
        class="ant-btn css-var-_r_1_ ant-btn-default ant-btn-color-default ant-btn-variant-outlined"
        type="button"
      >
        <span>
          重 置
        </span>
      </button>
      <button
        class="ant-btn css-var-_r_1_ ant-btn-primary ant-btn-color-primary ant-btn-variant-solid"
        type="button"
      >
        <span>
          提 交
        </span>
      </button>
    </div>
  </form>
</div>
`;

exports[`💵 ProFormMoney > 💵 can input negative 1`] = `
<div>
  <form
    autocomplete="off"
    class="ant-form ant-form-vertical css-var-_r_r_ ant-form-css-var ant-pro-form"
  >
    <input
      style="display: none;"
      type="text"
    />
    <div
      class="ant-form-item css-var-_r_r_ ant-form-css-var ant-form-item-has-success ant-form-item-vertical"
    >
      <div
        class="ant-row ant-form-item-row css-var-_r_r_"
      >
        <div
          class="ant-col ant-form-item-control css-var-_r_r_"
        >
          <div
            class="ant-form-item-control-input"
          >
            <div
              class="ant-form-item-control-input-content"
            >
              <div
                class="ant-input-number ant-input-number-mode-input css-var-_r_r_ ant-input-number-css-var ant-input-number-status-success ant-input-number-outlined ant-input-number-in-form-item ant-input-number-focused"
                style="width: 100%;"
              >
                <input
                  aria-valuenow="-55.33"
                  autocomplete="off"
                  class="ant-input-number-input"
                  id="amount"
                  placeholder="请输入"
                  role="spinbutton"
                  step="1"
                  value="¥ -55.33"
                />
                <div
                  class="ant-input-number-actions"
                >
                  <span
                    aria-disabled="false"
                    aria-label="Increase Value"
                    class="ant-input-number-action ant-input-number-action-up"
                    role="button"
                    unselectable="on"
                  >
                    <span
                      aria-label="up"
                      class="anticon anticon-up"
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="up"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M890.5 755.3L537.9 269.2c-12.8-17.6-39-17.6-51.7 0L133.5 755.3A8 8 0 00140 768h75c5.1 0 9.9-2.5 12.9-6.6L512 369.8l284.1 391.6c3 4.1 7.8 6.6 12.9 6.6h75c6.5 0 10.3-7.4 6.5-12.7z"
                        />
                      </svg>
                    </span>
                  </span>
                  <span
                    aria-disabled="false"
                    aria-label="Decrease Value"
                    class="ant-input-number-action ant-input-number-action-down"
                    role="button"
                    unselectable="on"
                  >
                    <span
                      aria-label="down"
                      class="anticon anticon-down"
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="down"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                        />
                      </svg>
                    </span>
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      style="display: flex; gap: 8px; align-items: center;"
    >
      <button
        class="ant-btn css-var-_r_r_ ant-btn-default ant-btn-color-default ant-btn-variant-outlined"
        type="button"
      >
        <span>
          重 置
        </span>
      </button>
      <button
        class="ant-btn css-var-_r_r_ ant-btn-primary ant-btn-color-primary ant-btn-variant-solid"
        type="button"
      >
        <span>
          提 交
        </span>
      </button>
    </div>
  </form>
</div>
`;

exports[`💵 ProFormMoney > 💵 can not input negative 1`] = `
<div>
  <form
    autocomplete="off"
    class="ant-form ant-form-vertical css-var-_r_m_ ant-form-css-var ant-pro-form"
  >
    <input
      style="display: none;"
      type="text"
    />
    <div
      class="ant-form-item css-var-_r_m_ ant-form-css-var ant-form-item-vertical"
    >
      <div
        class="ant-row ant-form-item-row css-var-_r_m_"
      >
        <div
          class="ant-col ant-form-item-control css-var-_r_m_"
        >
          <div
            class="ant-form-item-control-input"
          >
            <div
              class="ant-form-item-control-input-content"
            >
              <div
                class="ant-input-number ant-input-number-mode-input css-var-_r_m_ ant-input-number-css-var ant-input-number-outlined ant-input-number-in-form-item ant-input-number-focused"
                style="width: 100%;"
              >
                <input
                  aria-valuemin="0"
                  autocomplete="off"
                  class="ant-input-number-input"
                  id="amount"
                  placeholder="请输入"
                  role="spinbutton"
                  step="1"
                  value="-55.33"
                />
                <div
                  class="ant-input-number-actions"
                >
                  <span
                    aria-disabled="false"
                    aria-label="Increase Value"
                    class="ant-input-number-action ant-input-number-action-up"
                    role="button"
                    unselectable="on"
                  >
                    <span
                      aria-label="up"
                      class="anticon anticon-up"
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="up"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M890.5 755.3L537.9 269.2c-12.8-17.6-39-17.6-51.7 0L133.5 755.3A8 8 0 00140 768h75c5.1 0 9.9-2.5 12.9-6.6L512 369.8l284.1 391.6c3 4.1 7.8 6.6 12.9 6.6h75c6.5 0 10.3-7.4 6.5-12.7z"
                        />
                      </svg>
                    </span>
                  </span>
                  <span
                    aria-disabled="false"
                    aria-label="Decrease Value"
                    class="ant-input-number-action ant-input-number-action-down"
                    role="button"
                    unselectable="on"
                  >
                    <span
                      aria-label="down"
                      class="anticon anticon-down"
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="down"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                        />
                      </svg>
                    </span>
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      style="display: flex; gap: 8px; align-items: center;"
    >
      <button
        class="ant-btn css-var-_r_m_ ant-btn-default ant-btn-color-default ant-btn-variant-outlined"
        type="button"
      >
        <span>
          重 置
        </span>
      </button>
      <button
        class="ant-btn css-var-_r_m_ ant-btn-primary ant-btn-color-primary ant-btn-variant-solid"
        type="button"
      >
        <span>
          提 交
        </span>
      </button>
    </div>
  </form>
</div>
`;

exports[`💵 ProFormMoney > 💵 moneySymbol with custom locale 1`] = `
<div>
  <form
    autocomplete="off"
    class="ant-form ant-form-vertical css-var-_r_c_ ant-form-css-var ant-pro-form"
  >
    <input
      style="display: none;"
      type="text"
    />
    <div
      class="ant-form-item css-var-_r_c_ ant-form-css-var ant-form-item-vertical"
    >
      <div
        class="ant-row ant-form-item-row css-var-_r_c_"
      >
        <div
          class="ant-col ant-form-item-control css-var-_r_c_"
        >
          <div
            class="ant-form-item-control-input"
          >
            <div
              class="ant-form-item-control-input-content"
            >
              <div
                class="ant-input-number ant-input-number-mode-input css-var-_r_c_ ant-input-number-css-var ant-input-number-outlined ant-input-number-in-form-item ant-input-number-focused"
                style="width: 100%;"
              >
                <input
                  aria-valuenow="44.33"
                  autocomplete="off"
                  class="ant-input-number-input"
                  id="amount"
                  placeholder="Please enter"
                  role="spinbutton"
                  step="1"
                  value="$ 44.33"
                />
                <div
                  class="ant-input-number-actions"
                >
                  <span
                    aria-disabled="false"
                    aria-label="Increase Value"
                    class="ant-input-number-action ant-input-number-action-up"
                    role="button"
                    unselectable="on"
                  >
                    <span
                      aria-label="up"
                      class="anticon anticon-up"
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="up"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M890.5 755.3L537.9 269.2c-12.8-17.6-39-17.6-51.7 0L133.5 755.3A8 8 0 00140 768h75c5.1 0 9.9-2.5 12.9-6.6L512 369.8l284.1 391.6c3 4.1 7.8 6.6 12.9 6.6h75c6.5 0 10.3-7.4 6.5-12.7z"
                        />
                      </svg>
                    </span>
                  </span>
                  <span
                    aria-disabled="false"
                    aria-label="Decrease Value"
                    class="ant-input-number-action ant-input-number-action-down"
                    role="button"
                    unselectable="on"
                  >
                    <span
                      aria-label="down"
                      class="anticon anticon-down"
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="down"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                        />
                      </svg>
                    </span>
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      style="display: flex; gap: 8px; align-items: center;"
    >
      <button
        class="ant-btn css-var-_r_c_ ant-btn-default ant-btn-color-default ant-btn-variant-outlined"
        type="button"
      >
        <span>
          重 置
        </span>
      </button>
      <button
        class="ant-btn css-var-_r_c_ ant-btn-primary ant-btn-color-primary ant-btn-variant-solid"
        type="button"
      >
        <span>
          提 交
        </span>
      </button>
    </div>
  </form>
</div>
`;

exports[`💵 ProFormMoney > 💵 moneySymbol with custom symbol 1`] = `
<div>
  <form
    autocomplete="off"
    class="ant-form ant-form-vertical css-var-_r_h_ ant-form-css-var ant-pro-form"
  >
    <input
      style="display: none;"
      type="text"
    />
    <div
      class="ant-form-item css-var-_r_h_ ant-form-css-var ant-form-item-vertical"
    >
      <div
        class="ant-row ant-form-item-row css-var-_r_h_"
      >
        <div
          class="ant-col ant-form-item-control css-var-_r_h_"
        >
          <div
            class="ant-form-item-control-input"
          >
            <div
              class="ant-form-item-control-input-content"
            >
              <div
                class="ant-input-number ant-input-number-mode-input css-var-_r_h_ ant-input-number-css-var ant-input-number-outlined ant-input-number-in-form-item ant-input-number-focused"
                style="width: 100%;"
              >
                <input
                  aria-valuenow="44.33"
                  autocomplete="off"
                  class="ant-input-number-input"
                  id="amount"
                  placeholder="请输入"
                  role="spinbutton"
                  step="1"
                  value="💰 44.33"
                />
                <div
                  class="ant-input-number-actions"
                >
                  <span
                    aria-disabled="false"
                    aria-label="Increase Value"
                    class="ant-input-number-action ant-input-number-action-up"
                    role="button"
                    unselectable="on"
                  >
                    <span
                      aria-label="up"
                      class="anticon anticon-up"
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="up"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M890.5 755.3L537.9 269.2c-12.8-17.6-39-17.6-51.7 0L133.5 755.3A8 8 0 00140 768h75c5.1 0 9.9-2.5 12.9-6.6L512 369.8l284.1 391.6c3 4.1 7.8 6.6 12.9 6.6h75c6.5 0 10.3-7.4 6.5-12.7z"
                        />
                      </svg>
                    </span>
                  </span>
                  <span
                    aria-disabled="false"
                    aria-label="Decrease Value"
                    class="ant-input-number-action ant-input-number-action-down"
                    role="button"
                    unselectable="on"
                  >
                    <span
                      aria-label="down"
                      class="anticon anticon-down"
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="down"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                        />
                      </svg>
                    </span>
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      style="display: flex; gap: 8px; align-items: center;"
    >
      <button
        class="ant-btn css-var-_r_h_ ant-btn-default ant-btn-color-default ant-btn-variant-outlined"
        type="button"
      >
        <span>
          重 置
        </span>
      </button>
      <button
        class="ant-btn css-var-_r_h_ ant-btn-primary ant-btn-color-primary ant-btn-variant-solid"
        type="button"
      >
        <span>
          提 交
        </span>
      </button>
    </div>
  </form>
</div>
`;

exports[`💵 ProFormMoney > 💵 moneySymbol with global locale 1`] = `
<div>
  <form
    autocomplete="off"
    class="ant-form ant-form-vertical css-var-_r_7_ ant-form-css-var ant-pro-form"
  >
    <input
      style="display: none;"
      type="text"
    />
    <div
      class="ant-form-item css-var-_r_7_ ant-form-css-var ant-form-item-vertical"
    >
      <div
        class="ant-row ant-form-item-row css-var-_r_7_"
      >
        <div
          class="ant-col ant-form-item-control css-var-_r_7_"
        >
          <div
            class="ant-form-item-control-input"
          >
            <div
              class="ant-form-item-control-input-content"
            >
              <div
                class="ant-input-number ant-input-number-mode-input css-var-_r_7_ ant-input-number-css-var ant-input-number-outlined ant-input-number-in-form-item ant-input-number-focused"
                style="width: 100%;"
              >
                <input
                  aria-valuenow="44.33"
                  autocomplete="off"
                  class="ant-input-number-input"
                  id="amount"
                  placeholder="Please enter"
                  role="spinbutton"
                  step="1"
                  value="£ 44.33"
                />
                <div
                  class="ant-input-number-actions"
                >
                  <span
                    aria-disabled="false"
                    aria-label="Increase Value"
                    class="ant-input-number-action ant-input-number-action-up"
                    role="button"
                    unselectable="on"
                  >
                    <span
                      aria-label="up"
                      class="anticon anticon-up"
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="up"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M890.5 755.3L537.9 269.2c-12.8-17.6-39-17.6-51.7 0L133.5 755.3A8 8 0 00140 768h75c5.1 0 9.9-2.5 12.9-6.6L512 369.8l284.1 391.6c3 4.1 7.8 6.6 12.9 6.6h75c6.5 0 10.3-7.4 6.5-12.7z"
                        />
                      </svg>
                    </span>
                  </span>
                  <span
                    aria-disabled="false"
                    aria-label="Decrease Value"
                    class="ant-input-number-action ant-input-number-action-down"
                    role="button"
                    unselectable="on"
                  >
                    <span
                      aria-label="down"
                      class="anticon anticon-down"
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="down"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                        />
                      </svg>
                    </span>
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      style="display: flex; gap: 8px; align-items: center;"
    >
      <button
        class="ant-btn css-var-_r_7_ ant-btn-default ant-btn-color-default ant-btn-variant-outlined"
        type="button"
      >
        <span>
          Reset
        </span>
      </button>
      <button
        class="ant-btn css-var-_r_7_ ant-btn-primary ant-btn-color-primary ant-btn-variant-solid"
        type="button"
      >
        <span>
          Submit
        </span>
      </button>
    </div>
  </form>
</div>
`;

exports[`💵 ProFormMoney > 💵 update money precision when init 1`] = `
<div>
  <form
    autocomplete="off"
    class="ant-form ant-form-vertical css-var-_r_10_ ant-form-css-var ant-pro-form"
  >
    <input
      style="display: none;"
      type="text"
    />
    <div
      class="ant-form-item css-var-_r_10_ ant-form-css-var ant-form-item-vertical"
    >
      <div
        class="ant-row ant-form-item-row css-var-_r_10_"
      >
        <div
          class="ant-col ant-form-item-control css-var-_r_10_"
        >
          <div
            class="ant-form-item-control-input"
          >
            <div
              class="ant-form-item-control-input-content"
            >
              <div
                class="ant-input-number ant-input-number-mode-input css-var-_r_10_ ant-input-number-css-var ant-input-number-outlined ant-input-number-in-form-item ant-input-number-focused"
                style="width: 100%;"
              >
                <input
                  aria-valuenow="444444444.3333333"
                  autocomplete="off"
                  class="ant-input-number-input"
                  id="amount"
                  placeholder="请输入"
                  role="spinbutton"
                  step="1"
                  value="💰 444,444,444.33"
                />
                <div
                  class="ant-input-number-actions"
                >
                  <span
                    aria-disabled="false"
                    aria-label="Increase Value"
                    class="ant-input-number-action ant-input-number-action-up"
                    role="button"
                    unselectable="on"
                  >
                    <span
                      aria-label="up"
                      class="anticon anticon-up"
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="up"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M890.5 755.3L537.9 269.2c-12.8-17.6-39-17.6-51.7 0L133.5 755.3A8 8 0 00140 768h75c5.1 0 9.9-2.5 12.9-6.6L512 369.8l284.1 391.6c3 4.1 7.8 6.6 12.9 6.6h75c6.5 0 10.3-7.4 6.5-12.7z"
                        />
                      </svg>
                    </span>
                  </span>
                  <span
                    aria-disabled="false"
                    aria-label="Decrease Value"
                    class="ant-input-number-action ant-input-number-action-down"
                    role="button"
                    unselectable="on"
                  >
                    <span
                      aria-label="down"
                      class="anticon anticon-down"
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="down"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                        />
                      </svg>
                    </span>
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      style="display: flex; gap: 8px; align-items: center;"
    >
      <button
        class="ant-btn css-var-_r_10_ ant-btn-default ant-btn-color-default ant-btn-variant-outlined"
        type="button"
      >
        <span>
          重 置
        </span>
      </button>
      <button
        class="ant-btn css-var-_r_10_ ant-btn-primary ant-btn-color-primary ant-btn-variant-solid"
        type="button"
      >
        <span>
          提 交
        </span>
      </button>
    </div>
  </form>
</div>
`;
